finalproject0124/src/main/java/com/test/finalproject/error/exception/NoSearchSqlException.java
package com.test.finalproject.error.exception;

public class NoSearchSqlException extends RuntimeException {
	
	public NoSearchSqlException() {
		super();
	}
	
	public NoSearchSqlException(String message) {
		super(message);
	}
}
